syntax = "proto3";

package project.v1;

option go_package = "grud/api/gen/project/v1;projectv1";

import "google/protobuf/timestamp.proto";

// Project represents a project entity
message Project {
  int32 id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// GetAllProjectsRequest is the request message for GetAllProjects RPC
message GetAllProjectsRequest {}

// GetAllProjectsResponse is the response message for GetAllProjects RPC
message GetAllProjectsResponse {
  repeated Project projects = 1;
}

// ProjectService provides operations on projects
service ProjectService {
  // GetAllProjects returns all projects
  rpc GetAllProjects(GetAllProjectsRequest) returns (GetAllProjectsResponse);
}
